tests/fail/multiple_operator_between_non_integers.tig
"a" + 2 * "b" - "c" + 3 / "uno"
